# nodetool-replicate

./: AGENTS.md  CODEGEN.md  CODE_GENERATION_STATUS.md  README.md  pyproject.toml  requirements-dev.txt
.github/opencode-memory/: README.md  features.md  node-creation-guide.md  repository-context.md
.github/workflows/: copilot-setup-steps.yml  lint.yml  opencode-replicate-sync.yml  publish-wheel.yml  test.yml
src/nodetool/dsl/replicate/: dynamic_schema.py
src/nodetool/dsl/replicate/audio/: enhance.py  generate.py  separate.py  transcribe.py
src/nodetool/dsl/replicate/image/: analyze.py  enhance.py  face.py  generate.py  ocr.py  process.py  upscale.py
src/nodetool/dsl/replicate/text/: generate.py
src/nodetool/dsl/replicate/video/: enhance.py  generate.py
src/nodetool/nodes/replicate/: __init__.py  code_generation.py  code_generation.py.bak  dynamic_schema.py  gencode.py  prediction.py  replicate_node.py
src/nodetool/nodes/replicate/audio/: enhance.py  generate.py  separate.py  transcribe.py
src/nodetool/nodes/replicate/image/: analyze.py  enhance.py  face.py  generate.py  ocr.py  process.py  upscale.py
src/nodetool/nodes/replicate/text/: generate.py
src/nodetool/nodes/replicate/video/: enhance.py  generate.py
src/nodetool/package_metadata/: nodetool-replicate.json
