[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nodetool-replicate"
version = "0.6.0"
description = "Replicate support for Nodetool"
readme = "README.md"
authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
packages = [{ include = "nodetool", from = "src" }]
package-mode = true
include = ["src/nodetool/package_metadata/nodetool-replicate.json"]
repository = "https://github.com/nodetool-ai/nodetool-replicate"
[tool.poetry.dependencies]
python = "^3.11"
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }
replicate = "*"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E", "F"]
ignore = ["E402", "E721", "E501", "F401", "F811"]
