[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-replicate"
version = "0.6.2-rc.11"
description = "Replicate support for Nodetool"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = ["nodetool-core==0.6.2-rc.11", "replicate"]


[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.2-rc.11"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = ["src/nodetool/package_metadata/nodetool-replicate.json"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E", "F"]
ignore = ["E402", "E721", "E501", "F401", "F811"]
