[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-replicate"
version = "0.6.3-rc.25"
description = "Replicate support for Nodetool"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = ["nodetool-core==0.6.3-rc.25", "replicate"]


[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.3-rc.25"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
include = [
    "src/nodetool/package_metadata/*.json",
]

[tool.uv]
extra-index-url = ["https://nodetool-ai.github.io/nodetool-registry/simple/"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E", "F"]
ignore = ["E402", "E721", "E501", "F401", "F811"]
